--- a/src/app/pages/display.component.html
+++ b/src/app/pages/display.component.html
@@ -49,7 +49,7 @@
                 <div class="animated fadeIn" *ngIf="current_poll == 3">
                   <div class="card card-inverse" style="width: 100%;">
                     <div class="card-body text-center">
-                      <p class="card-title">Bagaimana perasaan anda terkait dimulainya digitalization di UT?</p>
+                      <h5 class="card-title">Bagaimana perasaan anda terkait dimulainya digitalization di UT?</h5>
                       <div class="question2chart">
                         <canvas baseChart
                         style="display: block; height: 300px"
@@ -64,7 +64,7 @@
               <div class="animated fadeIn" *ngIf="current_poll == 4">
                   <div class="card card-inverse" style="width: 100%;">
                     <div class="card-body text-center">
-                      <p class="card-title">Apakah kita semua berkomitmen untuk mensukseskan UT Digitalization?</p>
+                      <h5 class="card-title">Apakah kita semua berkomitmen untuk mensukseskan UT Digitalization?</h5>
                       <div class="question2chart">
                         <canvas baseChart
                         style="display: block; height: 300px"
