--- a/src/app/pages/display.component.html
+++ b/src/app/pages/display.component.html
@@ -55,7 +55,8 @@
                         style="display: block; height: 300px"
                         [data]="doughnutChart3Data"
                         [labels]="doughnutChart3Labels"
-                        [chartType]="doughnutChart3Type">
+                        [chartType]="doughnutChart3Type"
+                        [colors]="doughnutChart2Colors">
                       </canvas>
                     </div>
                   </div>
@@ -70,7 +71,8 @@
                         style="display: block; height: 300px"
                         [data]="doughnutChart4Data"
                         [labels]="doughnutChart4Labels"
-                        [chartType]="doughnutChart4Type">
+                        [chartType]="doughnutChart4Type"
+                        [colors]="doughnutChart2Colors">
                       </canvas>
                     </div>
                   </div>
