--- a/src/app/pages/display.component.html
+++ b/src/app/pages/display.component.html
@@ -39,6 +39,7 @@
                                 style="display: block; height: 300px"
                                 [data]="doughnutChart2Data"
                                 [labels]="doughnutChart2Labels"
+                                [options]="doughnutChartOptions"
                                 [chartType]="doughnutChart2Type"
                                 [colors]="doughnutChart2Colors">
                         </canvas>
@@ -55,6 +56,7 @@
                         style="display: block; height: 300px"
                         [data]="doughnutChart3Data"
                         [labels]="doughnutChart3Labels"
+                        [options]="doughnutChartOptions"
                         [chartType]="doughnutChart3Type"
                         [colors]="doughnutChart2Colors">
                       </canvas>
@@ -70,6 +72,7 @@
                         <canvas baseChart
                         style="display: block; height: 300px"
                         [data]="doughnutChart4Data"
+                        [options]="doughnutChartOptions"
                         [labels]="doughnutChart4Labels"
                         [chartType]="doughnutChart4Type"
                         [colors]="doughnutChart2Colors">
